# rich_typer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
rich_typer/: __init__.py  __main__.py  core.py  formatting.py  main.py  models.py  utils.py
