[tool.poetry]
name = "rich_typer"
version = "0.1.3"
description = "more beautiful Typer"
authors = ["Elin <365433079@qq.com>"]
readme = "README.md"
repository = "https://github.com/Elinpf/rich_typer"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
typer = "^0.4.0"
rich = "^11.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
